missing yacceleratorfulfilmentprocess extension

--- a/manifest.json
+++ b/manifest.json
@@ -92,7 +92,8 @@
       "c4hfdemodata",
       "cxsskymaevents",
       "kymaexternalservices",
-      "kymaexternalservicesbackoffice"
+      "kymaexternalservicesbackoffice",
+      "yacceleratorfulfilmentprocess"
     ],
     "properties": [
       {
