--- a/kymaexternalservices/project.properties
+++ b/kymaexternalservices/project.properties
@@ -26,3 +26,6 @@ oauth2.kyma.kid=kyma
 oauth2.kyma.keystore.location=/security/keystore.jks
 oauth2.kyma.keystore.password=nimda123
 oauth2.kyma.public.address=ec1808-sapcx-thkeynote.demo.hybris.com
+
+outboundservices.httpclient.max.connections=20
+outboundservices.httpclient.connections.connectionTimeout=5000
