--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ base.properties
 **/tags/addons
 **/messages/addons
 *_bof.jar
+kymaexternalservices/lib/.lastupdate
+kymaexternalservices/lib/resilience4j-annotations-1.2.0.jar
+kymaexternalservices/lib/resilience4j-cache-1.2.0.jar
+kymaexternalservices/lib/resilience4j-circuitbreaker-1.2.0.jar
+kymaexternalservices/lib/resilience4j-core-1.2.0.jar
+kymaexternalservices/lib/resilience4j-retry-1.2.0.jar
+kymaexternalservices/lib/resilience4j-spring-1.2.0.jar
+kymaexternalservices/lib/vavr-0.9.2.jar
