--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
-    "commerceSuiteVersion": "1905.4", 
+    "commerceSuiteVersion": "1905",
+    "useCloudExtensionPack": true,
     "extensions": [
       "acceleratorwebservicesaddon",
       "adaptivesearchbackoffice",
