--- a/kymafixes/.classpath
+++ b/kymafixes/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="src" path="/kymaintegrationservices"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/platform"/>
+	<classpathentry exported="true" kind="src" path="/odata2webservices"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
