Add kymafixes to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -93,7 +93,8 @@
       "cxsskymaevents",
       "kymaexternalservices",
       "kymaexternalservicesbackoffice",
-      "yacceleratorfulfilmentprocess"
+      "yacceleratorfulfilmentprocess",
+      "kymafixes"
     ],
     "properties": [
       {
