Fix spartacussampledata extension name

--- a/manifest.json
+++ b/manifest.json
@@ -96,7 +96,7 @@
       "ycommercewebservices",
       "ycommercewebservicestest",
       "commercewebservicesdata",
-      "spartacussampledataaddon",
+      "spartacussampledata",
       "c4hfdemodata",
       "cxsskymaevents",
       "kymaexternalservices",
