--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
       "assistedserviceyprofileaddon",
       "assistedserviceyprofilefacades",
       "yaasyprofileconnect",
+      "captchaaddon",
       "cmsbackoffice",
       "cmsoccaddon",
       "cmssmartedit",
@@ -102,6 +103,11 @@
       "kymaexternalservices",
       "kymaexternalservicesbackoffice",
       "yacceleratorfulfilmentprocess",
+      "customercouponaddon",
+      "customercouponsamplesaddon",
+      "customerinterestsaddon",
+      "notificationaddon",
+      "personalizationyprofilesampledataaddon",
       "kymafixes"
     ],
     "properties": [
@@ -143,7 +149,6 @@
 { "addon": "assistedservicestorefront", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
 { "addon": "assistedserviceyprofileaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
 { "addon": "captchaaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "configurablebundleaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
 { "addon": "consignmenttrackingaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
 { "addon": "customercouponaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
 { "addon": "customercouponsamplesaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
@@ -161,15 +166,8 @@
 { "addon": "personalizationsampledataaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
 { "addon": "personalizationyprofilesampledataaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
 { "addon": "profiletagaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "selectivecartsplitlistaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
 { "addon": "smarteditaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "stocknotificationaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "textfieldconfiguratortemplateaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "timedaccesspromotionengineaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "timedaccesspromotionenginesamplesaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "xyformssamples", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "xyformsstorefrontcommons", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" },
-{ "addon": "ysapproductconfigaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" }
+{ "addon": "textfieldconfiguratortemplateaddon", "storefront": "yacceleratorstorefront", "template": "yacceleratorstorefront" }
     ],
     "aspects": [
       {
