--- a/manifest.json
+++ b/manifest.json
@@ -107,8 +107,7 @@
       "customercouponsamplesaddon",
       "customerinterestsaddon",
       "notificationaddon",
-      "personalizationyprofilesampledataaddon",
-      "kymafixes"
+      "personalizationyprofilesampledataaddon"
     ],
     "properties": [
       {
