--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -312,6 +312,36 @@
         "notificationaddon",
         "personalizationyprofilesampledataaddon"
     ],
+    "properties": [
+        {
+            "key": "lang.packs",
+            "value": "de,en,es,es_CO,fr,it,ja,ko,pt,ru,zh,zh_TW,hi,id,cs,cy"
+        },
+        {
+            "key": "googleApiKey",
+            "value": ""
+        },
+        {
+            "key": "multicountrysampledataaddon.import.active",
+            "value": "false"
+        },
+        {
+            "key": "assistedservicestorefront.css.paths.responsive",
+            "value": "/responsive/common/css/assistedservicestorefront.css;/responsive/common/css/storeFinder.css;/responsive/common/css/customer360.css"
+        },
+        {
+            "key": "assistedservicestorefront.css.paths.mobile",
+            "value": "/responsive/common/css/assistedservicestorefront.css;/responsive/common/css/storeFinder.css;/responsive/common/css/customer360.css"
+        },
+        {
+            "key": "corsfilter.acceleratorservices.allowedOrigins",
+            "value": "*"
+        },
+        {
+            "key": "corsfilter.ycommercewebservices.allowedOrigins",
+            "value": "*"
+        }
+    ],
     "storeFrontExtension": "yacceleratorstorefront",
     "storeFrontWebRoot": "/yacceleratorstorefront",
     "storefrontAddons": [
@@ -438,37 +468,9 @@
     ],
     "useCloudExtensionPack": false,
     "useConfig": {
-
-        "properties": [
-            {
-                "key": "lang.packs",
-                "value": "de,en,es,es_CO,fr,it,ja,ko,pt,ru,zh,zh_TW,hi,id,cs,cy"
-            },
-            {
-                "key": "googleApiKey",
-                "value": ""
-            },
-            {
-                "key": "multicountrysampledataaddon.import.active",
-                "value": "false"
-            },
-            {
-                "key": "assistedservicestorefront.css.paths.responsive",
-                "value": "/responsive/common/css/assistedservicestorefront.css;/responsive/common/css/storeFinder.css;/responsive/common/css/customer360.css"
-            },
-            {
-                "key": "assistedservicestorefront.css.paths.mobile",
-                "value": "/responsive/common/css/assistedservicestorefront.css;/responsive/common/css/storeFinder.css;/responsive/common/css/customer360.css"
-            },
-            {
-                "key": "corsfilter.acceleratorservices.allowedOrigins",
-                "value": "*"
-            },
-            {
-                "key": "corsfilter.ycommercewebservices.allowedOrigins",
-                "value": "*"
-            }
-        ]
+        "languages": {
+            "location": "langpacks"
+        }
     },
     "webTests": {
         "excludedPackages": [
