--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -211,6 +211,7 @@
         "adaptivesearchsamplesaddon",
         "adaptivesearchsolr",
         "adaptivesearchwebservices",
+        "adminapi",
         "apiregistrybackoffice",
         "apiregistryservices",
         "assistedservicecustomerinterestsaddon",
@@ -223,6 +224,8 @@
         "assistedservicewebservices",
         "assistedserviceyprofileaddon",
         "assistedserviceyprofilefacades",
+        "backofficesolrsearch",
+        "backofficesearchservices",
         "yaasyprofileconnect",
         "captchaaddon",
         "cmsbackoffice",
@@ -261,6 +264,7 @@
         "ordermanagementwebservices",
         "orderselfserviceaddon",
         "outboundservices",
+        "pcmbackoffice",
         "pcmbackofficesamplesaddon",
         "permissionswebservices",
         "personalizationaddon",
@@ -284,9 +288,14 @@
         "profiletagaddon",
         "promotionenginesamplesaddon",
         "rulebuilderbackoffice",
+        "searchbackoffice",
+        "searchprovidercssearchbackoffice",
+        "searchprovidercssearchservices",
+        "searchservices",
         "smartedit",
         "smarteditaddon",
         "smarteditwebservices",
+        "solrfacetsearch",
         "solrfacetsearchbackoffice",
         "solrserver",
         "textfieldconfiguratortemplateaddon",
@@ -338,9 +347,31 @@
             "value": "*"
         },
         {
-            "key": "corsfilter.ycommercewebservices.allowedOrigins",
+            "key": "corsfilter.commercewebservices.allowedHeaders",
+            "value": "origin content-type accept authorization cache-control x-anonymous-consents x-profile-tag-debug x-consent-reference"
+        },        {
+        {
+            "key": "corsfilter.commercewebservices.exposedHeaders",
+            "value": "x-anonymous-consents"
+        },
+        {
+            "key": "corsfilter.commercewebservices.allowedOrigins",
+            "value": "*"
+        },
+        {
+            "key": "corsfilter.assistedservicewebservices.allowedHeaders",
+            "value": "origin content-type accept authorization cache-control x-anonymous-consents x-profile-tag-debug x-consent-reference"
+        },        {
+        {
+            "key": "corsfilter.assistedservicewebservices.exposedHeaders",
+            "value": "x-anonymous-consents"
+        },
+        {
+            "key": "corsfilter.assistedservicewebservices.allowedOrigins",
             "value": "*"
         }
+
+
     ],
     "storeFrontExtension": "yacceleratorstorefront",
     "storeFrontWebRoot": "/yacceleratorstorefront",
