fix occ extensions

--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -306,8 +306,9 @@
         "warehousingwebservices",
         "yacceleratorinitialdata",
         "yacceleratorstorefront",
-        "ycommercewebservices",
-        "ycommercewebservicestest",
+        "commercewebservices",
+        "commercewebservicestest",
+        "commercewebservicescommons",
         "commercewebservicesdata",
         "spartacussampledata",
         "c4hfdemodata",
