fix occ extensions

--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -307,7 +307,7 @@
         "yacceleratorinitialdata",
         "yacceleratorstorefront",
         "commercewebservices",
-        "commercewebservicestest",
+        "commercewebservicestests",
         "commercewebservicescommons",
         "commercewebservicesdata",
         "spartacussampledata",
