fix occ extensions

--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -110,8 +110,8 @@
                     "name": "acceleratorservices"
                 },
                 {
-                    "contextPath": "/rest",
-                    "name": "ycommercewebservices"
+                    "contextPath": "/occ",
+                    "name": "commercewebservices"
                 },
                 {
                     "contextPath": "/smartedit",
