--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -94,6 +94,10 @@
             ],
             "webapps": [
                 {
+                   "contextPath": "/hac",
+                   "name": "hac"
+                },
+                {
                     "contextPath": "/adminapi",
                     "name": "adminapi"
                 },
