add /medias to api aspect

--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -146,6 +146,10 @@
                     "name": "oauth2"
                 },
                 {
+                   "contextPath": "/medias",
+                   "name": "mediaweb"
+                },
+                {
                     "contextPath": "/cmswebservices",
                     "name": "cmswebservices"
                 },
