--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -356,6 +356,10 @@
             "value": "/responsive/common/css/assistedservicestorefront.css;/responsive/common/css/storeFinder.css;/responsive/common/css/customer360.css"
         },
         {
+            "key": "sop.post.url",
+            "value": "${ccv2.services.api.url.0}/acceleratorservices/sop-mock/process"
+        }
+        {
             "key": "corsfilter.acceleratorservices.allowedOrigins",
             "value": "*"
         },
