--- a/core-customize/hybris/config/environments/local-dev.properties
+++ b/core-customize/hybris/config/environments/local-dev.properties
@@ -44,3 +44,9 @@ backoffice.cockpitng.additionalResourceLoader.enabled=true
 backoffice.cockpitng.uifactory.cache.enabled=false
 backoffice.cockpitng.widgetclassloader.resourcecache.enabled=false
 backoffice.cockpitng.resourceloader.resourcecache.enabled=false
+
+# Mock Payment provider
+sop.post.url=${ccv2.services.api.url.0}/acceleratorservices/sop-mock/process
+# Anybody should be able to access mock payment provider
+corsfilter.acceleratorservices.allowedOrigins=*
+
