--- a/core-customize/hybris/config/environments/common.properties
+++ b/core-customize/hybris/config/environments/common.properties
@@ -43,8 +43,8 @@ website.electronics-spa.http=${ccv2.services.jsapps.url.0}
 website.electronics-spa.https=${ccv2.services.jsapps.url.0}
 
 
-website.electronics.http=${ccv2.services.accstorefront.url.0}
-website.electronics.https=${ccv2.services.accstorefront.url.0}
+website.electronics.http=${ccv2.services.accstorefront.url.0}${yacceleratorstorefront.webroot}
+website.electronics.https=${ccv2.services.accstorefront.url.0}${yacceleratorstorefront.webroot}
 
 # Whitelisting SmartEdit for your Storefront
 # https://help.sap.com/viewer/86dd1373053a4c2da8f9885cc9fbe55d/1905/en-US/fb742b29cf3c4e81aac7c131c0441172.html
