add webhook configuration

--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -417,6 +417,10 @@
                     "value": ""
                 },
                 {
+                    "contextPath": "/odata2webservices",
+                    "name": "odata2webservices"
+                },
+                {
                     "key": "xss.filter.header.X-Frame-Options",
                     "value": ""
                 },
