--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ kymaexternalservices/lib/resilience4j-core-1.2.0.jar
 kymaexternalservices/lib/resilience4j-retry-1.2.0.jar
 kymaexternalservices/lib/resilience4j-spring-1.2.0.jar
 kymaexternalservices/lib/vavr-0.9.2.jar
+node_modules
