updates to Integration Object and remove context path for yacceleratorstorefront

--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -377,7 +377,7 @@
                 },
                 {
                     "name": "yacceleratorstorefront",
-                    "contextPath": "/yacceleratorstorefront"
+                    "contextPath": ""
                 },
                 {
                     "name": "yb2bacceleratorstorefront",
