remove accelerator storefront extensions

--- a/core-customize/hybris/config/environments/common.properties
+++ b/core-customize/hybris/config/environments/common.properties
@@ -145,3 +145,5 @@ log4j2.logger.sapppspricing.name=com.sap.retail.sapppspricing
 log4j2.logger.sapppspricing.level=debug
 log4j2.logger.sapppspricing.appenderRef.stdout.ref=STDOUT
 
+acceleratorservices.payment.sopmock.enabled=true
+acceleratorservices.payment.hopmock.enabled=true
