--- a/js-storefront/spartacusstore/package.json
+++ b/js-storefront/spartacusstore/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run spartacusstore:serve-ssr",
+    "serve:ssr": "node dist/spartacusstore/server/main.js",
+    "build:ssr": "ng build && ng run spartacusstore:server",
+    "prerender": "ng run spartacusstore:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,12 +21,14 @@
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/platform-server": "^14.2.3",
     "@angular/router": "^14.2.0",
     "@angular/service-worker": "^14.2.3",
     "@ng-select/ng-select": "^9.0.2",
     "@ngrx/effects": "^14.3.0",
     "@ngrx/router-store": "^14.3.0",
     "@ngrx/store": "^14.3.0",
+    "@nguniversal/express-engine": "^14.2.3",
     "@spartacus/asm": "~5.0.0",
     "@spartacus/assets": "~5.0.0",
     "@spartacus/cart": "~5.0.0",
@@ -30,6 +36,7 @@
     "@spartacus/core": "~5.0.0",
     "@spartacus/order": "~5.0.0",
     "@spartacus/product": "~5.0.0",
+    "@spartacus/setup": "~5.0.0",
     "@spartacus/smartedit": "~5.0.0",
     "@spartacus/storefinder": "~5.0.0",
     "@spartacus/storefront": "~5.0.0",
@@ -38,10 +45,12 @@
     "@spartacus/user": "~5.0.0",
     "angular-oauth2-oidc": "^13.0.1",
     "bootstrap": "^4.6.1",
+    "express": "^4.15.2",
     "i18next": "^21.9.1",
     "i18next-http-backend": "^1.4.1",
     "ngx-infinite-scroll": "^14.0.0",
     "rxjs": "^6.6.0",
+    "ts-loader": "^9.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -49,8 +58,11 @@
     "@angular-devkit/build-angular": "^14.2.10",
     "@angular/cli": "~14.2.10",
     "@angular/compiler-cli": "^14.2.0",
+    "@nguniversal/builders": "^14.2.3",
     "@spartacus/schematics": "^5.0.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^14.15.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
