--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -5,6 +5,64 @@
         "cloudmediaconversion",
         "mediaconversionbackoffice"
     ],
+    "storefrontAddons": [
+        {
+            "addons": [
+                "adaptivesearchsamplesaddon",
+                "assistedservicecustomerinterestsaddon",
+                "assistedservicepromotionaddon",
+                "assistedservicestorefront",
+                "assistedserviceyprofileaddon",
+                "captchaaddon",
+                "chineseaddressaddon",
+                "configurablebundleaddon",
+                "consignmenttrackingaddon",
+                "customercouponaddon",
+                "customercouponsamplesaddon",
+                "customerinterestsaddon",
+                "customerticketingaddon",
+                "eventtrackingwsaddon",
+                "merchandisingaddon",
+                "merchandisingstorefrontsampledataaddon",
+                "multicountrysampledataaddon",
+                "notificationaddon",
+                "ordermanagementaddon",
+                "orderselfserviceaddon",
+                "pcmbackofficesamplesaddon",
+                "personalizationaddon",
+                "personalizationsampledataaddon",
+                "personalizationyprofilesampledataaddon",
+                "profiletagaddon",
+                "selectivecartsplitlistaddon",
+                "smarteditaddon",
+                "stocknotificationaddon",
+                "textfieldconfiguratortemplateaddon",
+                "timedaccesspromotionengineaddon",
+                "timedaccesspromotionenginesamplesaddon",
+                "xyformssamples",
+                "xyformsstorefrontcommons",
+                "ysapproductconfigaddon"
+            ],
+            "storefronts": [
+                "yacceleratorstorefront",
+                "yb2bacceleratorstorefront"
+            ],
+            "template": "yacceleratorstorefront"
+        },
+        {
+            "addons": [
+                "accountsummaryaddon",
+                "b2bacceleratoraddon",
+                "b2bpunchoutaddon",
+                "chinesecommerceorgaddressaddon",
+                "commerceorgaddon",
+                "commerceorgsamplesaddon",
+                "sapproductconfigb2baddon"
+            ],
+            "storefront": "yb2bacceleratorstorefront",
+            "template": "yacceleratorstorefront"
+        }
+    ],
     "useConfig": {
         "properties": [
             {
