fix order validation use case and add adminapi to api aspecct

--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -490,7 +490,11 @@
                     "name": "hac",
                     "contextPath": "/hac"
                 },
-                {
+                 {
+                    "name": "adminapi",
+                    "contextPath": "/adminapi"
+                },
+               {
                     "name": "mediaweb",
                     "contextPath": "/medias"
                 },
